--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # Mandatory info for starting the app
-REACT_APP_MORALIS_APPLICATION_ID = ZaANMA1tFpyuCxiOGVbRGIC38jHDPtxfkMtp4Yhi
-REACT_APP_MORALIS_SERVER_URL = https://fwsgzvl40upo.usemoralis.com:2053/server
+
+REACT_APP_MORALIS_APPLICATION_ID = T2XrLPwVt0KIdjpRRf1cQMqCpTBfVqkArsoKgfvS
+REACT_APP_MORALIS_SERVER_URL = https://hzgy5ia3dcqs.usemoralis.com:2053/server
